# calcsx

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
CalcSX_app/: __main__.py  main.py
CalcSX_app/gui/: gui_utils.py
CalcSX_app/physics/: bobbin.py  geometry.py  physics_utils.py  superposition.py
CalcSX_app/plots/: plot_defs.py
CalcSX_app/primary/: main_utils.py  project_view.py
CalcSX_app/resources/html/: help.txt
CalcSX_app/resources/images/: app.icns  bobsx.icns  csx.icns
CalcSX_app/results/: results_page.py
CalcSX_app/tabs/: tab_defs.py
CalcSX_app/views/: slice_viewer.py  workspace_3d.py
calcsx_exporter/: README.md  calcsx_exporter.py
