[build-system]
requires     = ["briefcase>=0.4.0"]
build-backend = "briefcase.backend"

[tool.briefcase]
project_name = "CalcSX_app"
version      = "2.2.0"
bundle       = "sx.calc.calcsx"

[tool.briefcase.app.CalcSX_app]
formal_name   = "CalcSX"
description   = "A magnetostatics simulation for superconducting coils"
author        = "Alexander Skrypek"
author_email  = "as7168@columbia.edu"
url           = "https://calc.sx"
license       = "MIT"
requires = [
  "numpy",
  "scipy",
  "pandas",
  "PyQt5",
  "scikit-learn",
  "pyvista",
  "pyvistaqt"
]

# Only your inner package
sources       = ["CalcSX_app"]

# Non-code assets
resources     = ["CalcSX_app/resources"]
icon          = "CalcSX_app/resources/images/app"

entry_point = "CalcSX_app.main:main"

[tool.briefcase.app.CalcSX_app.document_type.csx]
description = "CalcSX Coil File"
extension   = "csx"
icon        = "CalcSX_app/resources/images/csx"
url         = "https://calc.sx/csx"

[tool.briefcase.app.CalcSX_app.document_type.bobsx]
description = "CalcSX Bobbin File"
extension   = "bobsx"
icon        = "CalcSX_app/resources/images/bobsx"
url         = "https://calc.sx/bobsx"
